  * Update configuration version.
  * Update self-tests.
  * Remove own compression option.
  * Prepare for Python 3 module.
  * Build with libcurl4-openssl-dev.
  * Patch to remove outdated documentation.
  * Remove own ABI virtual package.
  * Add http destination module to -core.
  * Add hook commands module to -core.
  * Add loggen modules to -core.
  * Add secret storage module to -core.
  * Update Standards-Version to 4.3.0 .

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Tue, 25 Dec 2018 09:40:28 +0000

syslog-ng (3.13.2-5) unstable; urgency=medium

  * Update maintainer email address.
  * Add libcurl4-openssl-dev to Build-Conflicts.
  * Correct wording of patch short description.
  * Don't specify parallel to debhelper.
  * Update Standards-Version to 4.2.1 .

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Mon, 15 Oct 2018 21:32:24 +0000

syslog-ng (3.13.2-4.2) unstable; urgency=medium

  * Non-maintainer upload.
  * [ebb81d1] Ignore PEP8 W504 warning (Closes: #910896)

 -- Vincent Bernat <bernat@debian.org>  Mon, 15 Oct 2018 08:22:59 +0200

syslog-ng (3.13.2-4.1) unstable; urgency=medium

  * Non-maintainer upload.
  * [a611875] Change maintainer address to @tracker.debian.org (Closes: #899867)
  * [fcd4051] Fix installation step of syslog-ng-mod-extra when building with -A
    (Closes: #901117)

 -- Vincent Bernat <bernat@debian.org>  Fri, 10 Aug 2018 09:15:56 +0200

syslog-ng (3.13.2-4) unstable; urgency=medium

  * [a514e12] Fix testcase issue in GNU Hurd

 -- SZALAY Attila <sasa@debian.org>  Sun, 04 Mar 2018 13:52:53 +0100

syslog-ng (3.13.2-3) unstable; urgency=medium

  * [afa41f8] Fixed pylint reported new issues.
    The new version of pylint has an added
    check which triggered by some of the
    python code within the project. (Closes: #889303)

 -- SZALAY Attila <sasa@debian.org>  Sun, 11 Feb 2018 17:06:23 +0100

syslog-ng (3.13.2-2) unstable; urgency=medium

  * [776dd44] Removed two typo from the get_path_max code.