@@ -3,7 +3,7 @@ usr/lib/syslog-ng/libsyslog-ng.so
 usr/lib/syslog-ng/libevtlog.so
 #usr/lib/syslog-ng/syslog-ng/libtest/libsyslog-ng-test.a
 usr/lib/syslog-ng/libsyslog-ng-native-connector.a
-usr/lib/**/syslog-ng.pc
-#usr/lib/**/syslog-ng-test.pc
-usr/lib/**/syslog-ng-native-connector.pc
+usr/lib/*/pkgconfig/syslog-ng.pc
+#usr/lib/*/pkgconfig/syslog-ng-test.pc
+usr/lib/*/pkgconfig/syslog-ng-native-connector.pc
 usr/share/syslog-ng/tools
